--- a/style.css
+++ b/style.css
@@ -3,33 +3,25 @@ body {
   font-size: 13px;
 }
 
-h1 {
-  font-size: 17px;
-  font-weight: bold;
-  margin: 0;
-}
-
-h2 {
-  font-size: 15px;
-  padding-top: 1em;
-  padding-bottom: 1em;
-  font-weight: normal;
-  margin: 0;
-}
-
-p {
-  margin: 0;
-}
-
-li {
-  margin: 0;
-}
-
+h1,
+p,
 ol {
   margin: 0;
 }
 
-a {
+h1 {
+  font-size: 17px;
+  font-weight: bold;
+}
+
+h2 {
   font-size: 15px;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  font-weight: normal;
+  padding: 0;
+}
+
+a {
   color: green;
 }
